--- a/bootstrap/08-icons.html
+++ b/bootstrap/08-icons.html
@@ -6,41 +6,43 @@
     <title>Bootstrap 08 - Icons</title>
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-    />
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
-    />
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <main class="container mt-4">
       <h1 class="my-4">Bootstrap 08 - Icons</h1>
-      <button type="button" class="btn btn-info">
-        <i class="fab fa-1.5x fa-github"></i>
-        <span>Github</span>
-      </button>
-      <button type="button" class="btn btn-info">
-        <i class="fab fa-1.5x fa-linkedin"></i>
-        <span>LinkedIn</span>
-      </button>
-      <button type="button" class="btn btn-info">
-        <i class="fab fa-1.5x fa-twitter"></i>
-        <span>Twitter</span>
-      </button>
-      <button type="button" class="btn btn-outline-success">
-        <i class="fab fa-3x fa-github"></i>
-        <span>Github</span>
-      </button>
-      <button type="button" class="btn btn-outline-success">
-        <i class="fab fa-3x fa-linkedin"></i>
-        <span>LinkedIn</span>
-      </button>
-      <button type="button" class="btn btn-outline-success">
-        <i class="fab fa-3x fa-twitter"></i>
-        <span>Twitter</span>
-      </button>
+      <section class="w-50 mx-auto d-flex justify-content-center mt-4">
+        <button type="button" class="btn btn-info m-3">
+          <i class="fab fa-1.5x fa-github"></i>
+          <span>Github</span>
+        </button>
+        <button type="button" class="btn btn-info m-3">
+          <i class="fab fa-1.5x fa-linkedin"></i>
+          <span>LinkedIn</span>
+        </button>
+        <button type="button" class="btn btn-info m-3">
+          <i class="fab fa-1.5x fa-twitter"></i>
+          <span>Twitter</span>
+        </button>
+      </section>
+      <section class="w-50 mx-auto d-flex justify-content-center mt-2">
+        <button type="button" class="btn btn-outline-success m-3">
+          <i class="fab fa-3x fa-github mt-1"></i>
+          <p class="mb-0">Github</p>
+        </button>
+        <button type="button" class="btn btn-outline-success m-3">
+          <i class="fab fa-3x fa-linkedin mt-1"></i>
+          <p class="mb-0">LinkedIn</p>
+        </button>
+        <button type="button" class="btn btn-outline-success m-3">
+          <i class="fab fa-3x fa-twitter mt-1"></i>
+          <p class="mb-0">Twitter</p>
+        </button>
+      </section>
     </main>
   </body>
 </html>
