--- a/css/06-grid.html
+++ b/css/06-grid.html
@@ -17,6 +17,8 @@
         <div class="grid-item item4">4</div>
         <div class="grid-item item5">5</div>
         <div class="grid-item item6">6</div>
+        <div class="grid-item item7">7</div>
+        <div class="grid-item item8">8</div>
       </section>
     </main>
   </body>
