Update: changes to tabindex example

--- a/a11y/05-tabindex.html
+++ b/a11y/05-tabindex.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
-<!-- this line means you are using HTML5 on the page -->
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>This is the tab name</title>
+    <title>Accessibility - Tabindex Example</title>
+    <link rel="stylesheet" href="../_styles/styles.css" />
   </head>
   <body>
     <main>
       <h1>Tab Index Example</h1>
       <fieldset>
-        <legend>Who are the best characters in the Stormlight Archive?</legend>
+        <legend>
+          Who are your favorite characters in the Stormlight Archive?
+        </legend>
         <div class="form-control">
           <input id="kaladin" type="checkbox" name="character" />
           <label for="kaladin">Kaladin</label>
