--- a/jquery/03-events.html
+++ b/jquery/03-events.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>jQuery 03 - Events</title>
-    <link rel="stylesheet" href="../../_styles/styles.css" />
+    <link rel="stylesheet" href="../_styles/styles.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script defer src="03-events.js"></script>
   </head>
