Update: Bootstrap examples

--- a/bootstrap/08-icons.html
+++ b/bootstrap/08-icons.html
@@ -10,11 +10,10 @@
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
-    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <main class="container mt-4">
-      <h1 class="my-4">Bootstrap 08 - Icons</h1>
+      <h1 class="text-center my-4">Bootstrap 08 - Icons</h1>
       <section class="w-50 mx-auto d-flex justify-content-center mt-4">
         <button type="button" class="btn btn-info m-3">
           <i class="fab fa-1.5x fa-github"></i>
