--- a/bootstrap/00-hello-world.html
+++ b/bootstrap/00-hello-world.html
@@ -6,8 +6,7 @@
     <title>Bootstrap 00 - Hello World</title>
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-    />
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
