--- a/bootstrap/05-form.html
+++ b/bootstrap/05-form.html
@@ -7,29 +7,25 @@
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="../_styles/styles.css" />
-    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <main class="container mt-4">
-      <form class="bg-light border rounded mx-auto p-2">
-        <h1>Bootstrap 05 - Form</h1>
-        <div class="form-group">
-          <label for="email">Email address</label>
-          <input type="email" class="form-control" id="email" />
+    <main>
+      <h1 class="text-center mt-3">Bootstrap 05 - Form</h1>
+      <form class="border border-2 rounded rounded-3 mx-auto my-5 p-3 w-50">
+        <div class="mb-3">
+          <label for="email" class="form-label">Email address</label>
+          <input type="email" class="form-control" id="email" x />
         </div>
-        <div class="form-group">
-          <label for="password">Password</label>
+        <div class="mb-3">
+          <label for="password" class="form-label">Password</label>
           <input type="password" class="form-control" id="password" />
         </div>
-        <div class="form-check mb-2">
-          <input type="checkbox" class="form-check-input" id="checkbox1" />
-          <label class="form-check-label" for="checkbox1">Remember info</label>
+        <div class="mb-3 form-check">
+          <input type="checkbox" class="form-check-input" id="subscribe" />
+          <label class="form-check-label" for="subscribe">Subscribe</label>
         </div>
-        <div class="form-group my-4">
-          <input type="submit" class="btn btn-primary w-25" value="Submit" />
-          <input type="reset" class="btn btn-secondary w-25" value="Reset" />
-        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="reset" class="btn btn-secondary">Reset</button>
       </form>
     </main>
   </body>
