--- a/bootstrap/06-cards.html
+++ b/bootstrap/06-cards.html
@@ -6,49 +6,50 @@
     <title>Bootstrap 06 - Cards</title>
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-    />
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <main class="container mt-4">
-      <h1 class="center mb-4">Bootstrap 06 - Cards</h1>
-      <div class="card d-inline-block w-25">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi
-            ex suscipit corrupti, dicta vel similique vitae earum fugiat,
-            deserunt iusto itaque quidem recusandae inventore reprehenderit quia
-            dolores molestias beatae ipsum?
-          </p>
-          <button class="btn btn-primary">Button</button>
-        </div>
-      </div>
-      <div class="card d-inline-block w-25">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo
-            repudiandae officia odit voluptatem tempore, cumque distinctio
-            architecto tempora, harum quas vero sunt voluptatum laborum cum
-            quod. Incidunt soluta sequi officia!
-          </p>
-          <button class="btn btn-primary">Button</button>
-        </div>
-      </div>
-      <div class="card d-inline-block w-25">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim
-            tempora fugit sint possimus obcaecati explicabo quam rem aperiam
-            asperiores distinctio in, culpa soluta eum quibusdam quo quas
-            provident itaque repudiandae.
-          </p>
-          <button class="btn btn-primary">Button</button>
-        </div>
-      </div>
+    <main class="mt-4">
+      <h1 class="text-center mb-4">Bootstrap 06 - Cards</h1>
+      <section class="d-flex justify-content-center">
+        <section class="card d-inline-block w-25 mx-3">
+          <div class="card-body">
+            <h2 class="card-title">Card title</h2>
+            <p class="card-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi
+              ex suscipit corrupti, dicta vel similique vitae earum fugiat,
+              deserunt iusto itaque quidem recusandae inventore reprehenderit
+              quia dolores molestias beatae ipsum?
+            </p>
+            <button class="btn btn-primary">Button</button>
+          </div>
+        </section>
+        <section class="card d-inline-block w-25 mx-3">
+          <div class="card-body">
+            <h2 class="card-title">Card title</h2>
+            <p class="card-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo
+              repudiandae officia odit voluptatem tempore, cumque distinctio
+              architecto tempora, harum quas vero sunt voluptatum laborum cum
+              quod. Incidunt soluta sequi officia!
+            </p>
+            <button class="btn btn-primary">Button</button>
+          </div>
+        </section>
+        <section class="card d-inline-block w-25 mx-3">
+          <div class="card-body">
+            <h2 class="card-title">Card title</h2>
+            <p class="card-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim
+              tempora fugit sint possimus obcaecati explicabo quam rem aperiam
+              asperiores distinctio in, culpa soluta eum quibusdam quo quas
+              provident itaque repudiandae.
+            </p>
+            <button class="btn btn-primary">Button</button>
+          </div>
+        </section>
+      </section>
     </main>
   </body>
 </html>
