--- a/bootstrap/07-buttons.html
+++ b/bootstrap/07-buttons.html
@@ -6,13 +6,12 @@
     <title>Bootstrap 07 - Buttons</title>
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-    />
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <main class="container mt-4">
-      <h1>Bootstrap 07 - Buttons</h1>
+      <h1 class="text-center">Bootstrap 07 - Buttons</h1>
       <div class="mt-4">
         <button type="button" class="btn btn-primary">btn-primary</button>
         <button type="button" class="btn btn-secondary">btn-secondary</button>
