--- a/css/05-flexbox.html
+++ b/css/05-flexbox.html
@@ -16,6 +16,9 @@
         <div class="flex-item item3">3</div>
         <div class="flex-item item4">4</div>
         <div class="flex-item item5">5</div>
+        <div class="flex-item item6">6</div>
+        <div class="flex-item item7">7</div>
+        <div class="flex-item item8">8</div>
       </section>
     </main>
   </body>
