--- a/css/06-grid.html
+++ b/css/06-grid.html
@@ -11,14 +11,14 @@
     <main>
       <h1>CSS Grid</h1>
       <section class="grid-container">
-        <div class="grid-item item1">1</div>
+        <header class="grid-item item1">Header</header>
         <div class="grid-item item2">2</div>
         <div class="grid-item item3">3</div>
         <div class="grid-item item4">4</div>
         <div class="grid-item item5">5</div>
         <div class="grid-item item6">6</div>
         <div class="grid-item item7">7</div>
-        <div class="grid-item item8">8</div>
+        <footer class="grid-item item8">Footer</footer>
       </section>
     </main>
   </body>
