--- a/html/06-one-page.html
+++ b/html/06-one-page.html
@@ -11,10 +11,11 @@
       <h1>All About Cheese</h1>
       <nav>
         <ul>
-          <li><a href="#">home</a></li>
+          <li><a href="#">Home</a></li>
           <li><a href="#parmesan">Parmesan</a></li>
           <li><a href="#camembert">Camembert</a></li>
           <li><a href="#manchego">Manchego</a></li>
+          <li><a href="#gruyere">Gruyère</a></li>
         </ul>
       </nav>
     </header>
@@ -22,7 +23,7 @@
       <section id="parmesan">
         <h2>Parmesan</h2>
         <h3>Info about Parmesan Chesse</h3>
-        <img src="https://via.placeholder.com/150" alt="" />
+        <img src="https://placehold.co/150x150" alt="placeholder image" />
         <p>
           Fromage frais cheddar the big cheese. Chalk and cheese fondue
           dolcelatte feta ricotta port-salut airedale edam. Taleggio smelly
@@ -34,7 +35,8 @@
       <section id="camembert">
         <h2>Camembert</h2>
         <h3>Info about Camembert Chesse</h3>
-        <img src="https://via.placeholder.com/200" alt="" />
+        <img src="https://placehold.co/200x200" alt="placeholder image" />
+
         <p>
           Camembert de normandie st. agur blue cheese stinking bishop. Blue
           castello cheese strings cheese triangles dolcelatte camembert de
@@ -47,7 +49,33 @@
       <section id="manchego">
         <h2>Manchego</h2>
         <h3>Info about Manchego Chesse</h3>
-        <img src="https://via.placeholder.com/250" alt="" />
+        <img
+          src="https://placehold.co/300x300"
+          alt="placeholder image"
+          width="300"
+          height="300" />
+        <p>
+          Halloumi cheese triangles cheesecake. Croque monsieur lancashire swiss
+          babybel airedale ricotta mascarpone fromage. Cow stilton taleggio brie
+          lancashire feta feta babybel. Gouda caerphilly fromage when the cheese
+          comes out everybody's happy.
+        </p>
+        <p>
+          Feta gouda mascarpone. Cut the cheese bavarian bergkase who moved my
+          cheese fromage jarlsberg who moved my cheese cheeseburger taleggio.
+          Halloumi when the cheese comes out everybody's happy roquefort fromage
+          frais stilton cheese and wine cheese and biscuits parmesan. Cheese
+          strings cheese and biscuits.
+        </p>
+      </section>
+      <section id="gruyere">
+        <h2>Gruyère</h2>
+        <h3>Info about Gruyère Chesse</h3>
+        <img
+          src="https://placehold.co/400x400"
+          alt="placeholder image"
+          width="400"
+          height="400" />
         <p>
           Halloumi cheese triangles cheesecake. Croque monsieur lancashire swiss
           babybel airedale ricotta mascarpone fromage. Cow stilton taleggio brie
