Update: form with textarea

--- a/html/05-form.html
+++ b/html/05-form.html
@@ -64,9 +64,9 @@
         </div>
         <br />
         <div>
-          <label for="question" width="600">What is your question?</label>
+          <label for="question">What is your question?</label>
           <br />
-          <textarea name="textarea" id="question"></textarea>
+          <textarea name="textarea" id="question" rows="4" cols="70"></textarea>
         </div>
         <br />
         <div>
@@ -76,7 +76,7 @@
         <br />
         <div>
           <input type="submit" value="Submit Form" />
-          <input type="reset" value="Reset" />
+          <input type="reset" value="Reset Form" />
         </div>
       </form>
     </main>
