--- a/node/public/form.html
+++ b/node/public/form.html
@@ -4,20 +4,44 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" />
     <title>Form Submission</title>
   </head>
   <body>
     <main>
-      <h1>Form</h1>
-      <form method="post" action="/submit">
-        <label for="username">Username: </label>
-        <input type="text" name="username" id="username" />
-        <br /><br />
-        <label for="email">Email: </label>
-        <input type="text" name="email" id="email" />
-        <br /><br />
-        <input type="submit" value="Submit" />
-        <input type="reset" value="Reset" />
+      <form method="post" action="/submit" class="border w-50 mx-auto mt-4 p-3">
+        <h1 class="h1 mb-3 text-center">Form Submission</h1>
+        <div class="mb-3">
+          <label for="usernameInput" class="form-label">Username</label>
+          <input
+            type="text"
+            class="form-control"
+            id="usernameInput"
+            name="username" />
+        </div>
+        <div class="my-3">
+          <label for="emailInput" class="form-label">Email </label>
+          <input
+            type="email"
+            class="form-control"
+            id="emailInput"
+            name="email" />
+        </div>
+
+        <div class="mb-3 form-check">
+          <input
+            type="checkbox"
+            class="form-check-input"
+            id="checkboxInput"
+            name="newsletter"
+            value="yes" />
+          <label class="form-check-label" for="checkboxInput"
+            >Add me to the newsletter</label
+          >
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
       </form>
     </main>
   </body>
