--- a/06-bootstrap/04-modal.html
+++ b/06-bootstrap/04-modal.html
@@ -7,8 +7,7 @@
     <title>Exercise 04 - Modal</title>
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-    />
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
   </head>
   <body>
@@ -22,8 +21,7 @@
           type="button"
           class="btn btn-primary"
           data-bs-toggle="modal"
-          data-bs-target="#modal"
-        >
+          data-bs-target="#modal">
           More details
         </button>
       </div>
@@ -36,8 +34,7 @@
                 type="button"
                 class="btn-close"
                 data-bs-dismiss="modal"
-                aria-label="Close"
-              ></button>
+                aria-label="Close"></button>
             </div>
             <div class="modal-body">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. A,
